syntax = "proto3";
package pb;


option go_package = "github.com/RoyceAzure/sexy_gpt/broker_service/shared/pb";


message Role{
    string role_id=1;
    string role_name = 2;
    bool is_enabled = 3;
}
